# tsosi-app

./: .gitignore  Dockerfile  LICENSE  README.md  init.sh
backend/: README.md  init.sh  pyproject.toml  test.Dockerfile
backend/backend_site/: asgi.py  celery.py  settings.py  settings_local.dev.py  settings_local.example.py  settings_local.prod.py  settings_local.test.py  urls.py  wsgi.py
backend/deployment/: README.md  deploy.py  servers.py  tsosi-app.nginx.config  tsosi_celery.service  tsosi_celery_beat.service  tsosi_gunicorn.service  tsosi_gunicorn.socket
backend/tsosi/: README.md  app_settings.py  apps.py  dump_transfers.ipynb  exceptions.py  requirements.txt  scheduler.py  signals.py  tasks.py  urls.py
backend/tsosi/api/: router.py  serializers.py  throttle.py  viewsets.py
backend/tsosi/data/: README.md  analytics.py  data_preparation.py  data_updates.py  db_utils.py  enrichment.py  entity_matching.py  exceptions.py  ingestion.py  merging.py  pid_matching.py  playground.ipynb  run.ipynb  signals.py  task_result.py  token_bucket.py  transfer_matching.py  transfert_matching.py  utils.py
backend/tsosi/data/assets/: static_entities.json  supported_infrastructures.json  wikidata_extra_logo_urls.csv
backend/tsosi/data/country_shapes/: generate_country_gjson.ipynb
backend/tsosi/data/enrichment/: __init__.py  (+5 more)
backend/tsosi/migrations/: 0001_initial.py  0002_analytic.py  0002_remove_infrastructuredetails_backer_name_and_more.py  0002_remove_infrastructuredetails_is_partner_and_more.py  0003_entity_description_entity_manual_logo.py  0003_entity_icon.py  0004_entity_short_name.py  0005_entityrequest_identifierrequest.py  0006_identifierversion_unique_identifier_version_with_no_date_end.py  0007_remove_transfer_transfer_at_least_one_date_and_more.py  0008_registry_record_regex_entityname.py  0009_entity_raw_logo_url.py  0010_transfer_scoss.py  0011_transfer_merged_criteria_transfer_merged_into_and_more.py  0012_entity_parents_entity_types.py  0013_transferentitymatching_sub_entity.py  0014_dataloadsource_entity.py  0015_remove_infrastructuredetails_date_data_end_and_more.py  0016_transfer_emitter_sub_delete_transferentitymatching.py  0017_remove_transfer_agent_transfer_agent.py  0018_transfer_is_future.py  0019_alter_entity_types_alter_transfer_data_load_sources.py  0020_entity_is_barcelona.py  0021_alter_entity_types.py  0022_rename_legal_entity_description_infrastructuredetails_legal_entity_wikidata_id.py  0023_remove_infrastructuredetails_hide_amount.py  0024_supporttype_transfer_support_type.py
backend/tsosi/misc/: enrich_country_file.ipynb
backend/tsosi/models/: README.md  __init__.py  analytics.py  api_request.py  currency.py  date.py  entity.py  identifier.py  registry.py  source.py  static_data.py  transfer.py  transfert.py  utils.py
(+264 files in other folders)
